--- a/style.css
+++ b/style.css
@@ -531,6 +531,9 @@
             width:200px;
             height:70px;
         }
+        .services-title {
+            font-size: 1rem;
+        }
         .advantage-block-title {
             font-size: 1rem;
         }
