--- a/style.css
+++ b/style.css
@@ -297,13 +297,44 @@
         text-shadow: 0 0 3px #FF0000, 0 0 5px #FF9200;
     }
     
+    .footer-logo {
+        margin-top: 15px;
+    }
+    
     .footer-adress {
-        margin-top: 10px;
+        margin-top: 15px;
         cursor: pointer;
     }
     
-    .footer-map {
-        display: block;
+    .footer-adress p {
+        margin: 0;
+    }
+    
+    .contact {
+        display: flex;
+        flex-direction: column;
+        margin-top: 15px;
+        font-size: 14px;
+    }
+    
+    .contact-icon {
+        margin-right: 10px;
+    }
+    
+    .contact-link {
+        margin-bottom: 10px;
+    }
+    
+    .phone {
+        margin-left: -50px;
+    }
+    
+    .social-link {
+        margin-top: 15px;
+    }
+    
+    .social-link a {
+        margin-right: 10px;
     }
     
     .prof-title {
