--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@
     
     .footer-adress {
         margin-top: 15px;
-        cursor: pointer;
+        font-size: 14px;
     }
     
     .footer-adress p {
